# MtbTk

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
data/: GO.json  KEGG_pathways.json  cds_info.csv  epitopes.json  lineage_info.json
docs/: dependencies.txt
src/mtbtk/: __init__.py
src/mtbtk/data/: TF_genes.json
src/mtbtk/tbgea/: __init__.py  config.py  enrichment_analyzer.py
src/mtbtk/tbva/: SNP_effect_annotator.py  __init__.py  annotator.py  codon_variant_consolidator.py  config.py  lineage_identifier.py  vcf_parser.py
tests/: R1_ano.vcf  modified_R1_ano.vcf  test_Gene_Enrichment.ipynb  test_SNP_annotation.ipynb  test_transcriptome_result.csv
