[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MtbTk"
version = "0.0.3"
authors = [{ name = "TianyiLu", email = "tianyi9494@gmail.com" }]
description = "MtbTk: Genomics Analysis Toolkit for Mycobacterium Tuberculosis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intervaltree>=3.0.2",
    "numpy>=1.20.0",
    "pandas>=1.2.0",
    "scipy>=1.6.0",
    "statsmodels>=0.12.0",
]

[tool.setuptools.package-data]
"mtbtk" = ["data/*.json"]
[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "https://github.com/TianyiLu9494/MtbTk/"
Issues = "https://github.com/TianyiLu9494/MtbTk/issues"
License = "https://github.com/TianyiLu9494/MtbTk/blob/main/LICENSE"